[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.47.0", "setuptools_scm[toml]>=10.0.5"]
build-backend = "setuptools.build_meta"

[project]
name = "pulp-tool"
dynamic = ["version"]
description = "A Python client for Pulp API operations including RPM, log, and SBOM file management"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Rok Artifact Storage Team", email = "rokartifactstorage@redhat.com"}
]
maintainers = [
    {name = "Rok Artifact Storage Team", email = "rokartifactstorage@redhat.com"}
]
keywords = ["pulp", "rpm", "package-management", "konflux", "redhat"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
]
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "click>=8.3.2",
    "python-json-logger>=3.2.1,<5",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "hypothesis>=6.131.0",
    "respx>=0.23.1",
    "diff-cover>=10.2.0",
    # Code formatting and linting
    "black>=26.3.1",
    "flake8>=7.3.0",
    "mypy>=2.0.0",
    "pylint>=4.0.5",
    # Pre-commit hooks
    "pre-commit>=4.6.0",
    # Build tools
    "setuptools>=82.0.1",
    "wheel>=0.47.0",
    "setuptools-scm[toml]>=8.0",
    # Dependency CVE audit (local: make audit). When Pygments >2.19.2 is on PyPI, add
    # "pygments>=2.19.3" here and remove CVE-2026-4539 ignores from .github/workflows/security-scan.yml.
    "pip-audit>=2.10.0",
    "pip-tools>=7.4.0",
    "radon>=6.0.1",
]

[project.scripts]
pulp-tool = "pulp_tool.cli:main"

[project.entry-points."pulp_tool.commands"]
upload = "pulp_tool.cli.upload:upload"
upload_files = "pulp_tool.cli.upload_files:upload_files"
pull = "pulp_tool.cli.pull:pull"
search_by = "pulp_tool.cli.search_by:search_by"
create_repository = "pulp_tool.cli.create_repository:create_repository"

[project.urls]
Homepage = "https://github.com/konflux/pulp-tool"
Repository = "https://github.com/konflux/pulp-tool"
Issues = "https://github.com/konflux/pulp-tool/issues"
Documentation = "https://github.com/konflux/pulp-tool#readme"

[tool.setuptools]
packages = ["pulp_tool", "pulp_tool.api", "pulp_tool.models", "pulp_tool.utils"]

[tool.setuptools.package-data]
pulp_tool = ["py.typed", "*.toml", "*.cfg"]

[tool.setuptools_scm]
write_to = "pulp_tool/_version.py"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = ["import-error", "cyclic-import"]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 10
max-locals = 20
max-returns = 6
max-branches = 20
max-statements = 50
max-parents = 7
max-attributes = 7
min-public-methods = 1
max-public-methods = 20

[tool.mypy]
python_version = "3.15"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pulp_tool.api.pulp_client.client"
disable_error_code = ["override", "misc"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.pulp_client.content_query"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.pulp_client.results"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.utils.validation"
disable_error_code = ["unreachable"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.base"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.repositories.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.distributions.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.content.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.artifacts.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.api.tasks.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "pulp_tool.services.*"
disable_error_code = ["attr-defined", "arg-type"]

[[tool.mypy.overrides]]
module = "pulp_tool.utils.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.pull.*"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "pulp_tool.cli.*"
disable_error_code = ["attr-defined"]

# Tests often assert on invalid inputs, mocks, and bulk-added -> None on fixtures.
# lint-mypy runs mypy on pulp_tool/ and tests/; production code uses the overrides above,
# tests use this relaxed block (see Makefile lint-mypy).
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = [
    "attr-defined",
    "method-assign",
    "return-value",
    "var-annotated",
    "assignment",
    "arg-type",
    "call-arg",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=pulp_tool --cov-report=term-missing --cov-report=html --cov-report=xml --cov-fail-under=85"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async (use pytest-asyncio)",
]

[tool.coverage.report]
fail_under = 85

# Keep transitive pin aligned with closed MintMaker PRs until a deliberate bump.
[tool.uv]
constraint-dependencies = ["markdown-it-py==4.1.0"]
